--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,7 +5,7 @@ $wom_light_purple: #961397;
 $wom_purple: #831383;
 $wom_dark_purple: #4b0a5a;
 $wom_darkest_purple: #2e0434;
-$wom_pink: #fe0084;
+$wom_pink: #e92070;
 $wom_lightest_gray: #f2f3f7;
 $wom_light_gray: #e4e8eb;
 $wom_gray: #d0d8de;
